improved general page preformance by stopping the automatic drawing on home section when home section is not visible.

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 :root {
+    --menu-text-size: calc(1.5vw + 3vh);
     --subhead-text-size: calc(2vw + 2vh);
     --body-text-size: calc(1vw + 1vh);
     --max-body-size: 800px;
@@ -51,7 +52,7 @@ header {
 }
 
 header p {
-    font-size: 3rem;
+    font-size: var(--menu-text-size);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -179,6 +180,8 @@ section.light {
     padding: 0;
     margin: 0;
     z-index: 0;
+    opacity: 0;
+    transition: opacity 2s;
 }
 
 /******************************************************************************/
